update of report

--- a/report/references.bib
+++ b/report/references.bib
@@ -4,15 +4,12 @@
  booktitle = {Proceedings of the 17th European Conference on Machine Learning},
  series = {ECML'06},
  year = {2006},
- isbn = {3-540-45375-X, 978-3-540-45375-8},
+ isbn = {978-3-540-45375-8},
  location = {Berlin, Germany},
  pages = {282--293},
- numpages = {12},
  url = {http://dx.doi.org/10.1007/11871842_29},
  doi = {10.1007/11871842_29},
- acmid = {2091633},
  publisher = {Springer-Verlag},
- address = {Berlin, Heidelberg},
 }
 
 @article{deepmind,
@@ -25,4 +22,51 @@ pages = {484--503},
 volume  = {529}
 }
 
+@Article{Lai+Robbins:1985,
+  author =       "Lai, T. L. and Robbins, Herbert",
+  title =        "Asymptotically Efficient Adaptive Allocation Rules",
+  journal =      "Advances in Applied Mathematics",
+  year =         "1985",
+  volume =    "6",
+  number =    "1",
+  pages =     "4--22",
+  url = "http://www.cs.utexas.edu/~shivaram",
+}
 
+@Article{Allis:1994,
+  author = {Allis, L. Victor},
+  title = {Searching for solutions in Games and Artificial Intelligence},
+  year = {1994},
+  isbn = {90-9007488-0},
+  location = {Maastricht, Netherlands},
+  url = {https://project.dke.maastrichtuniversity.nl/games/files/phd/SearchingForSolutions.pdf}
+}
+
+@inproceedings{chaslot2008parallel,
+	title={Parallel monte-carlo tree search},
+	author={Chaslot, Guillaume MJ-B and Winands, Mark HM and van Den Herik, H Jaap},
+	booktitle={International Conference on Computers and Games},
+	pages={60--71},
+	year={2008},
+	organization={Springer}
+}
+
+@inproceedings{hingston2007experiments,
+	title={Experiments with Monte Carlo Othello},
+	author={Hingston, Philip and Masek, Martin},
+	booktitle={Evolutionary Computation, 2007. CEC 2007. IEEE Congress on},
+	pages={4059--4064},
+	year={2007},
+	organization={IEEE}
+}
+
+@article{auer2002finite,
+	title={Finite-time analysis of the multiarmed bandit problem},
+	author={Auer, Peter and Cesa-Bianchi, Nicolo and Fischer, Paul},
+	journal={Machine learning},
+	volume={47},
+	number={2-3},
+	pages={235--256},
+	year={2002},
+	publisher={Springer}
+}
