rc1 .tex & bibli

--- a/report/references.bib
+++ b/report/references.bib
@@ -70,3 +70,21 @@ volume  = {529}
 	year={2002},
 	publisher={Springer}
 }
+
+@inproceedings{de2016monte,
+	title={Monte carlo tree search with options for general video game playing},
+	author={de Waard, Maarten and Roijers, Diederik M and Bakkes, Sander CJ},
+	booktitle={Computational Intelligence and Games (CIG), 2016 IEEE Conference on},
+	pages={1--8},
+	year={2016},
+	organization={IEEE}
+}
+
+@inproceedings{finnsson2011game,
+	title={Game-tree properties and MCTS performance},
+	author={Finnsson, Hilmar and Bj{\"o}rnsson, Yngvi},
+	booktitle={IJCAI},
+	volume={11},
+	pages={23--30},
+	year={2011}
+}
